--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -34,9 +34,11 @@
         "<a name=\"top\"></a>\n",
         "# Advent of code 2018\n",
         "\n",
+        "[[**Open the notebook in Colab**]](https://colab.research.google.com/github/hhoppe/advent_of_code_2018/blob/main/advent_of_code_2018.ipynb)\n",
+        "\n",
         "IPython/Jupyter [notebook](https://github.com/hhoppe/advent_of_code_2018/blob/main/advent_of_code_2018.ipynb) by [Hugues Hoppe](http://hhoppe.com/); December 2021.\n",
         "\n",
-        "I participated in the 25-day [Advent of Code](https://adventofcode.com/) for the first time in **2020**.  See all my notes in this [original 2020 notebook]((https://github.com/hhoppe/advent_of_code_2020/blob/main/advent_of_code_2020.ipynb).\n",
+        "I participated in the 25-day [Advent of Code](https://adventofcode.com/) for the first time in **2020**.  See [all my notes from back then](https://github.com/hhoppe/advent_of_code_2020).\n",
         "\n",
         "Here I went back to solve the 2018 puzzles.\n",
         "\n",
