--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -36,38 +36,11 @@
         "\n",
         "[[**Open the notebook in Colab**]](https://colab.research.google.com/github/hhoppe/advent_of_code_2018/blob/main/advent_of_code_2018.ipynb)\n",
         "\n",
-        "IPython/Jupyter [notebook](https://github.com/hhoppe/advent_of_code_2018/blob/main/advent_of_code_2018.ipynb) by [Hugues Hoppe](http://hhoppe.com/); December 2021.\n",
+        "IPython/Jupyter [notebook](https://github.com/hhoppe/advent_of_code_2018/blob/main/advent_of_code_2018.ipynb) by [Hugues Hoppe](http://hhoppe.com/) with solutions to the [2018 Advent of Code puzzles](https://adventofcode.com/2018).\n",
         "\n",
-        "I participated in the 25-day [Advent of Code](https://adventofcode.com/) for the first time in **2020**.  See [all my notes from back then](https://github.com/hhoppe/advent_of_code_2020).\n",
+        "Mostly completed in November 2021.\n",
         "\n",
-        "Here I went back to solve the 2018 puzzles.\n",
-        "\n",
-        "This notebook is organized such that each day is self-contained and can be run on its own after the preamble.\n",
-        "\n",
-        "- The [**preamble**](#preamble) readies the inputs and answers for the puzzles.  No custom shortcut functions are introduced (other than `check_eq`) so the puzzle code solutions are easily recognizable.\n",
-        "\n",
-        "- For **each day**, the first notebook cell defines a `puzzle` object:\n",
-        "\n",
-        "  ```\n",
-        "    puzzle = advent.puzzle(day=1)\n",
-        "  ```\n",
-        "  The puzzle input string is automatically read into the attribute `puzzle.input`.\n",
-        "  This input string is unique to each Advent participant.\n",
-        "  By default, the notebook uses [my input data](https://github.com/hhoppe/advent_of_code_2018/tree/main/data) stored on GitHub,\n",
-        "  but the variable `INPUT_PATH_OR_URL_FORMAT` can refer to any URL or\n",
-        "  local file.\n",
-        "  Simlarly, the reference answer to each puzzle part is read using `ANSWER_PATH_OR_URL_FORMAT`.\n",
-        "\n",
-        "  Alternatively, we read each puzzle input and answers directly from adventofcode.com using a session cookie and the `advent-of-code-data` PyPI package.\n",
-        "\n",
-        "  For each of the two puzzle parts, a function (e.g. `process1`) takes an input string and returns a string or integer answer.\n",
-        "  Using calls like the following, we time the execution of each function and verify the answers:\n",
-        "  ```\n",
-        "    puzzle.verify(part=1, func=process1)\n",
-        "    puzzle.verify(part=2, func=process2)\n",
-        "  ```\n",
-        "\n",
-        "- At the end of the notebook, a table summarizes [**timing**](#timings) results.\n"
+        "See my [**2020** Advent-of-Code notebook](https://github.com/hhoppe/advent_of_code_2020) for notes on how the code is structured."
       ]
     },
     {
