--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -104,8 +104,8 @@
         "from typing import Any, Callable, Dict, List\n",
         "from typing import Optional, Set, Tuple, Union\n",
         "\n",
-        "import advent_of_code_hhoppe\n",
-        "import hhoppe_tools as hh\n",
+        "import advent_of_code_hhoppe  # https://github.com/hhoppe/advent-of-code-hhoppe/blob/main/advent_of_code_hhoppe/__init__.py\n",
+        "import hhoppe_tools as hh  # https://github.com/hhoppe/hhoppe-tools/blob/main/hhoppe_tools/__init__.py\n",
         "import mediapy as media\n",
         "import numpy as np\n",
         "import scipy.optimize"
