Use jupytext and data/*.tar.gz files

--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -7497,6 +7497,11 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "provenance": [],
+   "toc_visible": true
+  },
   "jupytext": {
    "cell_metadata_filter": "-all",
    "formats": "auto:percent,ipynb",
