--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -107,7 +107,10 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
+    "\n",
     "import collections\n",
+    "from collections.abc import Callable\n",
     "import dataclasses\n",
     "import functools\n",
     "import heapq\n",
@@ -116,7 +119,6 @@
     "import math\n",
     "import re\n",
     "import textwrap\n",
-    "from typing import Dict, List, Optional, Set, Tuple\n",
     "\n",
     "import advent_of_code_hhoppe  # https://github.com/hhoppe/advent-of-code-hhoppe/blob/main/advent_of_code_hhoppe/__init__.py\n",
     "import hhoppe_tools as hh  # https://github.com/hhoppe/hhoppe-tools/blob/main/hhoppe_tools/__init__.py\n",
@@ -356,25 +358,26 @@
     "@dataclasses.dataclass\n",
     "class Machine:\n",
     "  num_registers: int = 6\n",
-    "  registers = None\n",
-    "  ip_register: Optional[int] = None\n",
-    "  instructions = None\n",
+    "  registers: list[int] = []\n",
+    "  ip_register: int | None = None\n",
+    "  instructions: list[Machine.Instruction] = []\n",
     "  ip: int = 0\n",
     "\n",
     "  @dataclasses.dataclass\n",
     "  class Instruction:\n",
     "    operation: str\n",
-    "    operands: List[int]\n",
+    "    operands: tuple[int, ...]\n",
     "\n",
-    "  def __post_init__(self):\n",
+    "  def __post_init__(self) -> None:\n",
     "    self.registers = [0] * self.num_registers\n",
     "\n",
-    "    def assign(registers, operands, value):\n",
+    "    def assign(registers: list[int], operands: tuple[int, ...],\n",
+    "               value: int | bool) -> None:\n",
     "      output = operands[2]\n",
     "      assert 0 <= output < len(registers)\n",
     "      registers[output] = int(value)\n",
     "\n",
-    "    self.operations = {\n",
+    "    self.operations: dict[str, Callable[..., None]] = {\n",
     "        'addr': lambda r, o: assign(r, o, r[o[0]] + r[o[1]]),\n",
     "        'addi': lambda r, o: assign(r, o, r[o[0]] + o[1]),\n",
     "        'mulr': lambda r, o: assign(r, o, r[o[0]] * r[o[1]]),\n",
@@ -393,7 +396,7 @@
     "        'eqrr': lambda r, o: assign(r, o, r[o[0]] == r[o[1]]),\n",
     "    }\n",
     "\n",
-    "  def read_instructions(self, s):\n",
+    "  def read_instructions(self, s: str) -> None:\n",
     "    lines = s.strip('\\n').split('\\n')\n",
     "    if lines[0].startswith('#ip'):\n",
     "      self.ip_register = int(re.fullmatch(r'#ip (\\d+)', lines[0]).group(1))\n",
@@ -401,11 +404,11 @@
     "    self.instructions = []\n",
     "    for line in lines:\n",
     "      operation, *operands = line.split()\n",
-    "      operands = tuple(map(int, operands))\n",
-    "      assert operation in self.operations and len(operands) == 3\n",
-    "      self.instructions.append(self.Instruction(operation, operands))\n",
+    "      operands2 = tuple(map(int, operands))\n",
+    "      assert operation in self.operations and len(operands2) == 3\n",
+    "      self.instructions.append(self.Instruction(operation, operands2))\n",
     "\n",
-    "  def run_instruction(self, verbose=False):\n",
+    "  def run_instruction(self, verbose: bool = False) -> None:\n",
     "    if self.ip_register is not None:\n",
     "      self.registers[self.ip_register] = self.ip\n",
     "    instruction = self.instructions[self.ip]\n",
@@ -1901,8 +1904,8 @@
     "\n",
     "  @dataclasses.dataclass\n",
     "  class TreeNode:\n",
-    "    children: List['TreeNode']\n",
-    "    metadatas: List[int]\n",
+    "    children: list[TreeNode]\n",
+    "    metadatas: list[int]\n",
     "\n",
     "  values = map(int, s.split())\n",
     "\n",
@@ -2681,7 +2684,9 @@
    "id": "c2b952d5",
    "metadata": {},
    "source": [
-    "The blinking (darkened) region at the lower-right indicates the square with the largest sum of values in the image.  (Blue indicates small values; red indicates large values.)"
+    "The blinking (darkened) region at the lower-right indicates the square\n",
+    "with the largest sum of values in the image.\n",
+    "(Blue indicates small values; red indicates large values.)"
    ]
   },
   {
@@ -3041,7 +3046,7 @@
     "\n",
     "  @dataclasses.dataclass\n",
     "  class Cart:\n",
-    "    yx: Tuple[int, int]\n",
+    "    yx: tuple[int, int]\n",
     "    direction: str  # '<', '>', 'v', or '^'.\n",
     "    next_turn: int = 0  # Three states: 0=left, 1=straight, 2=right.\n",
     "\n",
@@ -3939,7 +3944,7 @@
     "\n",
     "  @dataclasses.dataclass\n",
     "  class Unit:\n",
-    "    yx: Tuple[int, int]\n",
+    "    yx: tuple[int, int]\n",
     "    ch: str  # 'E' (Elf) or 'G' (Goblin).\n",
     "    hit_points: int = 200\n",
     "\n",
@@ -4088,7 +4093,7 @@
     "\n",
     "  @dataclasses.dataclass\n",
     "  class Unit:\n",
-    "    yx: Tuple[int, int]\n",
+    "    yx: tuple[int, int]\n",
     "    ch: str  # 'E' (Elf) or 'G' (Goblin).\n",
     "    hit_points: int = 200\n",
     "\n",
@@ -6847,15 +6852,15 @@
     "\n",
     "  @dataclasses.dataclass\n",
     "  class Group:\n",
-    "    army: 'Army'\n",
+    "    army: Army\n",
     "    id: int\n",
     "    units: int\n",
     "    hit_points: int  # (per_unit)\n",
     "    attack_damage: int  # (per unit)\n",
     "    attack_type: str\n",
     "    initiative: int  # Higher initiative attacks first and wins ties.\n",
-    "    attributes: Dict[str, Set]  # ['immune'] and ['weak']\n",
-    "    target: 'Group'\n",
+    "    attributes: dict[str, set[str]]  # ['immune'] and ['weak']\n",
+    "    target: Group\n",
     "    targeted: bool\n",
     "\n",
     "    def __init__(self, army, id, line):\n",
@@ -6886,7 +6891,7 @@
     "  @dataclasses.dataclass\n",
     "  class Army:\n",
     "    name: str\n",
-    "    groups: List[Group]\n",
+    "    groups: list[Group]\n",
     "\n",
     "    def __init__(self, s):\n",
     "      lines = s.split('\\n')\n",
@@ -7486,7 +7491,7 @@
  "metadata": {
   "jupytext": {
    "cell_metadata_filter": "-all",
-   "formats": "auto:percent,ipynb",
+   "formats": "py:percent,ipynb",
    "main_language": "python",
    "notebook_metadata_filter": "-all"
   },
