--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -7491,6 +7491,11 @@
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [],
+   "provenance": [],
+   "toc_visible": true
+  },
   "jupytext": {
    "cell_metadata_filter": "-all",
    "formats": "py:percent,ipynb",
