--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -228,8 +228,8 @@
     "  # See https://github.com/wimglenn/advent-of-code-data.\n",
     "  hh.run('rm -f ~/.config/aocd/token*')\n",
     "  # Fill-in the session cookie in the following:\n",
-    "  hh.run(f\"if [ '{PROFILE}' == 'google.Hugues_Hoppe.965276' ]; then mkdir -p ~/.config/aocd && echo 53616... >~/.config/aocd/token; fi\")\n",
-    "  hh.run(f\"if [ '{PROFILE}' == 'github.hhoppe.1452460' ]; then mkdir -p ~/.config/aocd; echo 53616... >~/.config/aocd/token; fi\")\n",
+    "  hh.run(f\"if [ '{PROFILE}' = 'google.Hugues_Hoppe.965276' ]; then mkdir -p ~/.config/aocd && echo 53616... >~/.config/aocd/token; fi\")\n",
+    "  hh.run(f\"if [ '{PROFILE}' = 'github.hhoppe.1452460' ]; then mkdir -p ~/.config/aocd; echo 53616... >~/.config/aocd/token; fi\")\n",
     "  hh.run('pip install -q advent-of-code-data')\n",
     "  import aocd"
    ]
