Improve default_factory.

--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -360,9 +360,9 @@
     "@dataclasses.dataclass\n",
     "class Machine:\n",
     "  num_registers: int = 6\n",
-    "  registers: list[int] = dataclasses.field(default_factory=lambda: [])\n",
+    "  registers: list[int] = dataclasses.field(default_factory=list)\n",
     "  ip_register: int | None = None\n",
-    "  instructions: list[Machine.Instruction] = dataclasses.field(default_factory=lambda: [])\n",
+    "  instructions: list[Machine.Instruction] = dataclasses.field(default_factory=list)\n",
     "  ip: int = 0\n",
     "\n",
     "  @dataclasses.dataclass\n",
