--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -900,7 +900,7 @@
     "def day3(s, part2=False, visualize=False):  # Faster with numpy.\n",
     "  lines = s.strip('\\n').split('\\n')\n",
     "  pattern = r'^#(\\d+) @ (\\d+),(\\d+): (\\d+)x(\\d+)$'\n",
-    "  shape = (1000, 1000)\n",
+    "  shape = 1000, 1000\n",
     "  grid = np.full(shape, 0)\n",
     "  for line in lines:\n",
     "    claim, l, t, w, h = map(int, hh.re_groups(pattern, line))\n",
@@ -918,7 +918,7 @@
     "  if visualize:\n",
     "    image1 = media.to_rgb(grid * 1.0)\n",
     "    image2 = image1.copy()\n",
-    "    image2[t: t + h, l: l + w] = (0.9, 0.9, 0.0)\n",
+    "    image2[t: t + h, l: l + w] = 0.9, 0.9, 0.0\n",
     "    video = [image1, image2]\n",
     "    shrink = 2\n",
     "    if shrink > 1:\n",
@@ -1554,8 +1554,7 @@
     "    min_manhattan = np.take_along_axis(all_manhattans, closest[None], axis=0)[0]\n",
     "    count_min = np.count_nonzero(all_manhattans == min_manhattan, axis=0)\n",
     "    closest[count_min > 1] = -1  # Disqualify equidistant locations.\n",
-    "    unbounded = (set(closest[0]) | set(closest[-1]) |\n",
-    "                 set(closest[:, 0]) | set(closest[:, -1]))\n",
+    "    unbounded = set(closest[0]) | set(closest[-1]) | set(closest[:, 0]) | set(closest[:, -1])\n",
     "    counts = collections.Counter(closest.flat)\n",
     "    count, i = max((c, i) for i, c in counts.items()\n",
     "                   if i not in unbounded | {-1})\n",
@@ -1564,9 +1563,9 @@
     "      image = cmap[closest + 1]\n",
     "      unb = (closest[..., None] == np.array(list(unbounded))).sum(axis=-1) > 0\n",
     "      image[unb] += 105\n",
-    "      image[closest == -1] = (255, 255, 255)\n",
+    "      image[closest == -1] = 255, 255, 255\n",
     "      image2 = image.copy()\n",
-    "      image2[closest == i] = (255, 0, 0)\n",
+    "      image2[closest == i] = 255, 0, 0\n",
     "      media.show_video([image, image2], codec='gif', fps=1)\n",
     "    return count\n",
     "\n",
@@ -3082,7 +3081,7 @@
     "    if visualize:\n",
     "      image = image0.copy()\n",
     "      for cart in carts:\n",
-    "        image[cart.yx] = (0, 100, 0)\n",
+    "        image[cart.yx] = 0, 100, 0\n",
     "      images.append(image)\n",
     "    if verbose:\n",
     "      print(text_from_grid())\n",
@@ -3098,7 +3097,7 @@
     "        if not part2:\n",
     "          if visualize:\n",
     "            image = image.copy()\n",
-    "            image[new_yx] = (255, 0, 0)\n",
+    "            image[new_yx] = 255, 0, 0\n",
     "            images.append(image)\n",
     "            images = [im.repeat(3, axis=0).repeat(3, axis=1) for im in images]\n",
     "            images = [images[0]] * 20 + images + [images[-1]] * 40\n",
@@ -3107,7 +3106,7 @@
     "          print(f'first collision at iteration={iteration}')\n",
     "          return f'{new_yx[1]},{new_yx[0]}'\n",
     "        for crashed_cart in [cart, cart2]:\n",
-    "          crashed_cart.yx = (-1, -1)\n",
+    "          crashed_cart.yx = -1, -1\n",
     "        continue\n",
     "      ch = grid[new_yx]\n",
     "      assert ch in '/\\\\+-|', ord(ch)\n",
@@ -6130,12 +6129,12 @@
     "\n",
     "  depth, target = get_cave()\n",
     "  if not part2:\n",
-    "    shape = (target[0] + 1, target[1] + 1)\n",
+    "    shape = target[0] + 1, target[1] + 1\n",
     "    grid = generate_grid(depth, shape)\n",
     "    return sum(v[2] for v in grid.values())\n",
     "\n",
     "  import networkx as nx\n",
-    "  shape = (target[0] + pad, target[1] + pad)\n",
+    "  shape = target[0] + pad, target[1] + pad\n",
     "  grid = {c: v[2] for c, v in (generate_grid(depth, shape)).items()}\n",
     "  graph = generate_graph(grid, shape)\n",
     "  use_astar = True\n",
@@ -6708,10 +6707,9 @@
     "        *(((l, m), (m + 1, h)) if m < h else ((l, h),)\n",
     "          for l, m, h in zip(xl, xm, xh))):\n",
     "      xl, xh = np.array(child_min_max).T\n",
-    "      n_out = ((np.maximum(xl - xs, 0) + np.maximum(xs - xh, 0)).sum(axis=1) >\n",
-    "               rs).sum()  # Maximize num in-range = minimize num out-of-range.\n",
-    "      heapq.heappush(\n",
-    "          pq, (n_out, (xh - xl).max(), abs(xl).sum(), tuple(xl), tuple(xh)))\n",
+    "      # Maximize num in-range = minimize num out-of-range.\n",
+    "      n_out = ((np.maximum(xl - xs, 0) + np.maximum(xs - xh, 0)).sum(axis=1) > rs).sum()\n",
+    "      heapq.heappush(pq, (n_out, (xh - xl).max(), abs(xl).sum(), tuple(xl), tuple(xh)))\n",
     "\n",
     "\n",
     "check_eq(day23(s1), 7)\n",
@@ -6872,11 +6870,10 @@
     "      self.id = id\n",
     "      pattern = (r'^(\\d+) units each with (\\d+) hit points( \\(.*\\))? with'\n",
     "                 r' an attack that does (\\d+) (.*) damage at initiative (\\d+)$')\n",
-    "      (units, hit_points, attributes, attack_damage, attack_type,\n",
-    "       initiative) = hh.re_groups(pattern, line)\n",
-    "      (self.units, self.hit_points, self.attack_damage, self.attack_type,\n",
-    "       self.initiative) = (int(units), int(hit_points), int(attack_damage),\n",
-    "                           attack_type, int(initiative))\n",
+    "      units, hit_points, attributes, attack_damage, attack_type, initiative = hh.re_groups(\n",
+    "          pattern, line)\n",
+    "      self.units, self.hit_points, self.attack_damage, self.attack_type, self.initiative = (\n",
+    "          int(units), int(hit_points), int(attack_damage), attack_type, int(initiative))\n",
     "      self.attributes = {'immune': set(), 'weak': set()}\n",
     "      if attributes:\n",
     "        for attribute in attributes[2:-1].split('; '):\n",
