--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -203,8 +203,9 @@
     "PROFILE = 'google.Hugues_Hoppe.965276'\n",
     "# PROFILE = 'github.hhoppe.1452460'\n",
     "TAR_URL = f'https://github.com/hhoppe/advent_of_code_{YEAR}/raw/main/data/{PROFILE}.tar.gz'\n",
-    "hh.run(f\"if [ ! -d data/{PROFILE} ]; then (mkdir -p data && cd data &&\"\n",
-    "       f\" wget -q {TAR_URL} && tar xzf {PROFILE}.tar.gz); fi\")\n",
+    "if 1:\n",
+    "  hh.run(f\"if [ ! -d data/{PROFILE} ]; then (mkdir -p data && cd data &&\"\n",
+    "         f\" wget -q {TAR_URL} && tar xzf {PROFILE}.tar.gz); fi\")\n",
     "INPUT_URL = f'data/{PROFILE}/{{year}}_{{day:02d}}_input.txt'\n",
     "ANSWER_URL = f'data/{PROFILE}/{{year}}_{{day:02d}}{{part_letter}}_answer.txt'"
    ]
@@ -273,8 +274,7 @@
    },
    "outputs": [],
    "source": [
-    "advent = advent_of_code_hhoppe.Advent(\n",
-    "    year=YEAR, input_url=INPUT_URL, answer_url=ANSWER_URL)"
+    "advent = advent_of_code_hhoppe.Advent(year=YEAR, input_url=INPUT_URL, answer_url=ANSWER_URL)"
    ]
   },
   {
@@ -840,7 +840,7 @@
     }
    ],
    "source": [
-    "def day3a(s, part2=False, check_single_solution=False):\n",
+    "def day3a(s, *, part2=False, check_single_solution=False):\n",
     "  lines = s.strip('\\n').split('\\n')\n",
     "  pattern = r'^#(\\d+) @ (\\d+),(\\d+): (\\d+)x(\\d+)$'\n",
     "  grid: dict[tuple[int, int], int] = collections.defaultdict(int)\n",
@@ -897,7 +897,7 @@
     }
    ],
    "source": [
-    "def day3(s, part2=False, visualize=False):  # Faster with numpy.\n",
+    "def day3(s, *, part2=False, visualize=False):  # Faster with numpy.\n",
     "  lines = s.strip('\\n').split('\\n')\n",
     "  pattern = r'^#(\\d+) @ (\\d+),(\\d+): (\\d+)x(\\d+)$'\n",
     "  shape = 1000, 1000\n",
@@ -1110,7 +1110,7 @@
     }
    ],
    "source": [
-    "def day4(s, part2=False):\n",
+    "def day4(s, *, part2=False):\n",
     "  lines = s.strip('\\n').split('\\n')\n",
     "  lines = sorted(lines)\n",
     "  num_dates = sum('Guard' in line for line in lines)\n",
@@ -1241,7 +1241,7 @@
    },
    "outputs": [],
    "source": [
-    "def day5a(s, part2=False):  # Slow.\n",
+    "def day5a(s, *, part2=False):  # Slow.\n",
     "\n",
     "  def simplify_polymer(s):\n",
     "    pairs = [chr(ord('a') + i) + chr(ord('A') + i) for i in range(26)]\n",
@@ -1295,7 +1295,7 @@
     }
    ],
    "source": [
-    "def day5b(s, part2=False):  # Faster, using stack and numba.\n",
+    "def day5b(s, *, part2=False):  # Faster, using stack and numba.\n",
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def simplify_polymer(s):\n",
@@ -1349,7 +1349,7 @@
     }
    ],
    "source": [
-    "def day5(s, part2=False):  # Fastest; nested loops in numba.\n",
+    "def day5(s, *, part2=False):  # Fastest; nested loops in numba.\n",
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def length_of_simplified_polymer(codes):\n",
@@ -1535,7 +1535,7 @@
     }
    ],
    "source": [
-    "def day6(s, part2=False, max_sum=10_000, visualize=False):\n",
+    "def day6(s, *, part2=False, max_sum=10_000, visualize=False):\n",
     "  yxs = []\n",
     "  for line in s.strip('\\n').split('\\n'):\n",
     "    x, y = map(int, line.split(','))\n",
@@ -1752,7 +1752,7 @@
     }
    ],
    "source": [
-    "def day7(s, part2=False, num_workers=5, cost_base=60):\n",
+    "def day7(s, *, part2=False, num_workers=5, cost_base=60):\n",
     "  dependencies = collections.defaultdict(set)\n",
     "  nodes = set()\n",
     "  for line in s.strip('\\n').split('\\n'):\n",
@@ -1904,7 +1904,7 @@
     }
    ],
    "source": [
-    "def day8(s, part2=False):\n",
+    "def day8(s, *, part2=False):\n",
     "\n",
     "  @dataclasses.dataclass\n",
     "  class TreeNode:\n",
@@ -2042,7 +2042,7 @@
     }
    ],
    "source": [
-    "def day9a(s, part2=False):  # Compact.\n",
+    "def day9a(s, *, part2=False):  # Compact.\n",
     "  pattern = r'^(\\d+) players; last marble is worth (\\d+) points$'\n",
     "  num_players, last_marble = map(int, hh.re_groups(pattern, s.strip()))\n",
     "  if part2:\n",
@@ -2094,7 +2094,7 @@
     }
    ],
    "source": [
-    "def day9b(s, part2=False):  # Slightly faster with quick inner loop.\n",
+    "def day9b(s, *, part2=False):  # Slightly faster with quick inner loop.\n",
     "  pattern = r'^(\\d+) players; last marble is worth (\\d+) points$'\n",
     "  num_players, last_marble = map(int, hh.re_groups(pattern, s.strip()))\n",
     "  if part2:\n",
@@ -2161,7 +2161,7 @@
     }
    ],
    "source": [
-    "def day9(s, part2=False):  # Fastest.  Singly-linked list is sufficient!\n",
+    "def day9(s, *, part2=False):  # Fastest.  Singly-linked list is sufficient!\n",
     "  pattern = r'^(\\d+) players; last marble is worth (\\d+) points$'\n",
     "  num_players, last_marble = map(int, hh.re_groups(pattern, s.strip()))\n",
     "  if part2:\n",
@@ -2385,7 +2385,7 @@
     }
    ],
    "source": [
-    "def day10a(s, part2=False):  # Slow.\n",
+    "def day10a(s, *, part2=False):  # Slow.\n",
     "  positions0, velocities0 = [], []\n",
     "  for line in s.strip('\\n').split('\\n'):\n",
     "    pattern = r'^position=< *(\\S+), *(\\S+)> velocity=< *(\\S+), *(\\S+)>$'\n",
@@ -2468,7 +2468,7 @@
     }
    ],
    "source": [
-    "def day10(s, part2=False, visualize=False):  # Quick initial jump; visualize.\n",
+    "def day10(s, *, part2=False, visualize=False):  # Quick initial jump; visualize.\n",
     "  positions0, velocities0 = [], []\n",
     "  for line in s.strip('\\n').split('\\n'):\n",
     "    pattern = r'^position=< *(\\S+), *(\\S+)> velocity=< *(\\S+), *(\\S+)>$'\n",
@@ -2625,7 +2625,7 @@
     }
    ],
    "source": [
-    "def day11(s, part2=False, visualize=False):\n",
+    "def day11(s, *, part2=False, visualize=False):\n",
     "\n",
     "  def power_level(yx, serial_number):\n",
     "    rack_id = yx[1] + 10\n",
@@ -2845,7 +2845,7 @@
     }
    ],
    "source": [
-    "def day12(s, part2=False, visualize=False):\n",
+    "def day12(s, *, part2=False, visualize=False):\n",
     "  lines = s.strip('\\n').split('\\n')\n",
     "  assert lines[0].startswith('initial state: ') and not lines[1]\n",
     "  state = lines[0][15:]\n",
@@ -3046,7 +3046,7 @@
     }
    ],
    "source": [
-    "def day13(s, part2=False, verbose=False, visualize=False):\n",
+    "def day13(s, *, part2=False, verbose=False, visualize=False):\n",
     "\n",
     "  @dataclasses.dataclass\n",
     "  class Cart:\n",
@@ -4344,7 +4344,7 @@
     }
    ],
    "source": [
-    "def day15_part2(s, visualize=False):  # Faster bisection search.\n",
+    "def day15_part2(s, *, visualize=False):  # Faster bisection search.\n",
     "  current = 10\n",
     "  low = high = None\n",
     "  results = {}\n",
@@ -4549,7 +4549,7 @@
     }
    ],
    "source": [
-    "def day16(s, part2=False):\n",
+    "def day16(s, *, part2=False):\n",
     "  s1, s2 = s.split('\\n\\n\\n')\n",
     "  machine = Machine(num_registers=4)\n",
     "  num_operations = len(machine.operations)\n",
@@ -4757,7 +4757,7 @@
     }
    ],
    "source": [
-    "def day17(s, part2=False, visualize=False):\n",
+    "def day17(s, *, part2=False, visualize=False):\n",
     "  grid = {}\n",
     "\n",
     "  for line in s.strip('\\n').split('\\n'):\n",
@@ -4970,7 +4970,7 @@
     }
    ],
    "source": [
-    "def day18(s, num_minutes=10, part2=False, visualize=False):\n",
+    "def day18(s, *, num_minutes=10, part2=False, visualize=False):\n",
     "  grid = hh.grid_from_string(s)\n",
     "\n",
     "  def evolve_grid():\n",
@@ -5279,7 +5279,7 @@
     }
    ],
    "source": [
-    "def day19(s, part2=False, verbose=False):\n",
+    "def day19(s, *, part2=False, verbose=False):\n",
     "\n",
     "  def factors(n):\n",
     "    result = set()\n",
@@ -5431,7 +5431,7 @@
     "# backtracking along edges of the tree.  My solution is likely overkill for\n",
     "# this simpler case.\n",
     "\n",
-    "def day20(s, part2=False, visualize=False):\n",
+    "def day20(s, *, part2=False, visualize=False):\n",
     "  s, = hh.re_groups(r'^\\^([SNEW(|)]+)\\$$', s.strip())\n",
     "\n",
     "  def parse(s):\n",
@@ -5904,7 +5904,7 @@
     }
    ],
    "source": [
-    "def day21(s, part2=False):\n",
+    "def day21(s, *, part2=False):\n",
     "  machine = Machine()\n",
     "  machine.read_instructions(s)\n",
     "\n",
@@ -6077,7 +6077,7 @@
    ],
    "source": [
     "# https://www.reddit.com/r/adventofcode/comments/a8i1cy/comment/ecazvbe\n",
-    "def day22a(s, part2=False, pad=60):  # Using networkx; slower.\n",
+    "def day22a(s, *, part2=False, pad=60):  # Using networkx; slower.\n",
     "  rocky, wet, narrow = 0, 1, 2\n",
     "  del narrow  # unused\n",
     "  torch, gear, neither = 0, 1, 2\n",
@@ -6191,7 +6191,7 @@
     }
    ],
    "source": [
-    "def day22(s, part2=False, pad=60, visualize=False):  # With numba.\n",
+    "def day22(s, *, part2=False, pad=60, visualize=False):  # With numba.\n",
     "  lines = s.strip('\\n').split('\\n')\n",
     "  depth = int(hh.re_groups(r'^depth: (\\d+)$', lines[0])[0])\n",
     "  target_yx = tuple(map(int, hh.re_groups(r'^target: (\\d+),(\\d+)$', lines[1])))[::-1]\n",
@@ -6456,7 +6456,7 @@
     }
    ],
    "source": [
-    "def day23a(s, part2=False):\n",
+    "def day23a(s, *, part2=False):\n",
     "  positions0, radii0 = [], []\n",
     "  for line in s.strip('\\n').split('\\n'):\n",
     "    pattern = r'^pos=<([0-9-]+),([0-9-]+),([0-9-]+)>, r=(\\d+)$'\n",
@@ -6611,7 +6611,7 @@
     }
    ],
    "source": [
-    "def day23b(s, part2=False):\n",
+    "def day23b(s, *, part2=False):\n",
     "  # Divide-and-conquer using octree decomposition, inspired by\n",
     "  # https://github.com/wimglenn/advent-of-code-wim/blob/master/aoc_wim/aoc2018/q23.py.\n",
     "  pattern = r'^pos=<([0-9-]+),([0-9-]+),([0-9-]+)>, r=(\\d+)$'\n",
@@ -6684,7 +6684,7 @@
     }
    ],
    "source": [
-    "def day23(s, part2=False):\n",
+    "def day23(s, *, part2=False):\n",
     "  # Divide-and-conquer using octree decomposition, adapted from\n",
     "  # https://github.com/wimglenn/advent-of-code-wim/blob/master/aoc_wim/aoc2018/q23.py.\n",
     "  # Improved to be robust (not assuming cubes with power-of-two dimensions).\n",
@@ -6850,7 +6850,7 @@
     }
    ],
    "source": [
-    "def day24(s, verbose=False, boost=0, immune_must_win=False):\n",
+    "def day24(s, *, verbose=False, boost=0, immune_must_win=False):\n",
     "\n",
     "  @dataclasses.dataclass\n",
     "  class Group:\n",
