--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -843,7 +843,7 @@
     "def day3a(s, *, part2=False, check_single_solution=False):\n",
     "  lines = s.strip('\\n').split('\\n')\n",
     "  pattern = r'^#(\\d+) @ (\\d+),(\\d+): (\\d+)x(\\d+)$'\n",
-    "  grid: dict[tuple[int, int], int] = collections.defaultdict(int)\n",
+    "  grid: collections.defaultdict[tuple[int, int], int] = collections.defaultdict(int)\n",
     "  for line in lines:\n",
     "    claim, l, t, w, h = map(int, hh.re_groups(pattern, line))\n",
     "    for y in range(t, t + h):\n",
