--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -868,9 +868,9 @@
     "check_eq(day3a('#1 @ 1,3: 4x4\\n#2 @ 3,1: 4x4\\n#3 @ 5,5: 2x2'), 4)\n",
     "puzzle.verify(1, day3a)  # ~300 ms.\n",
     "\n",
-    "day3_part2a = functools.partial(day3a, part2=True)\n",
-    "check_eq(day3_part2a('#1 @ 1,3: 4x4\\n#2 @ 3,1: 4x4\\n#3 @ 5,5: 2x2'), 3)\n",
-    "puzzle.verify(2, day3_part2a)  # ~300 ms."
+    "day3a_part2 = functools.partial(day3a, part2=True)\n",
+    "check_eq(day3a_part2('#1 @ 1,3: 4x4\\n#2 @ 3,1: 4x4\\n#3 @ 5,5: 2x2'), 3)\n",
+    "puzzle.verify(2, day3a_part2)  # ~300 ms."
    ]
   },
   {
@@ -1266,9 +1266,9 @@
     "check_eq(day5a('dabAcCaCBAcCcaDA'), 10)\n",
     "# puzzle.verify(1, day5a)  # ~3 s.\n",
     "\n",
-    "day5_part2a = functools.partial(day5a, part2=True)\n",
-    "check_eq(day5_part2a('dabAcCaCBAcCcaDA'), 4)\n",
-    "# puzzle.verify(2, day5_part2a)  # ~80 s."
+    "day5a_part2 = functools.partial(day5a, part2=True)\n",
+    "check_eq(day5a_part2('dabAcCaCBAcCcaDA'), 4)\n",
+    "# puzzle.verify(2, day5a_part2)  # ~80 s."
    ]
   },
   {
@@ -1320,9 +1320,9 @@
     "check_eq(day5b('dabAcCaCBAcCcaDA'), 10)  # ~700 ms for numba compilation.\n",
     "puzzle.verify(1, day5b)  # ~ 20 ms.\n",
     "\n",
-    "day5_part2b = functools.partial(day5b, part2=True)\n",
-    "check_eq(day5_part2b('dabAcCaCBAcCcaDA'), 4)\n",
-    "puzzle.verify(2, day5_part2b)  # ~260 ms with numba (~440 ms without numba)"
+    "day5b_part2 = functools.partial(day5b, part2=True)\n",
+    "check_eq(day5b_part2('dabAcCaCBAcCcaDA'), 4)\n",
+    "puzzle.verify(2, day5b_part2)  # ~260 ms with numba (~440 ms without numba)"
    ]
   },
   {
@@ -2067,8 +2067,8 @@
     "check_eq(day9a('30 players; last marble is worth 5807 points'), 37305)\n",
     "puzzle.verify(1, day9a)  # ~20 ms.\n",
     "\n",
-    "day9_part2a = functools.partial(day9a, part2=True)\n",
-    "# puzzle.verify(2, day9_part2a)  # ~2000 ms."
+    "day9a_part2 = functools.partial(day9a, part2=True)\n",
+    "# puzzle.verify(2, day9a_part2)  # ~2000 ms."
    ]
   },
   {
@@ -2133,8 +2133,8 @@
     "check_eq(day9b('30 players; last marble is worth 5807 points'), 37305)\n",
     "puzzle.verify(1, day9b)  # ~17 ms.\n",
     "\n",
-    "day9_part2b = functools.partial(day9b, part2=True)\n",
-    "# puzzle.verify(2, day9_part2b)  # ~1800 ms."
+    "day9b_part2 = functools.partial(day9b, part2=True)\n",
+    "# puzzle.verify(2, day9b_part2)  # ~1800 ms."
    ]
   },
   {
@@ -2415,9 +2415,9 @@
     "check_eq(day10a(s1), 'HI')\n",
     "puzzle.verify(1, day10a)  # ~230 ms.\n",
     "\n",
-    "day10_part2a = functools.partial(day10a, part2=True)\n",
-    "check_eq(day10_part2a(s1), 3)\n",
-    "puzzle.verify(2, day10_part2a)  # ~230 ms."
+    "day10a_part2 = functools.partial(day10a, part2=True)\n",
+    "check_eq(day10a_part2(s1), 3)\n",
+    "puzzle.verify(2, day10a_part2)  # ~230 ms."
    ]
   },
   {
@@ -3286,7 +3286,7 @@
     }
    ],
    "source": [
-    "def day14_part1a(s):  # Slow.\n",
+    "def day14a_part1(s):  # Slow.\n",
     "  num_recipes = int(s)\n",
     "  recipes = [3, 7]\n",
     "  indices = [0, 1]\n",
@@ -3301,11 +3301,11 @@
     "  return ''.join(map(str, recipes[num_recipes:num_recipes + 10]))\n",
     "\n",
     "\n",
-    "check_eq(day14_part1a('9'), '5158916779')\n",
-    "check_eq(day14_part1a('5'), '0124515891')\n",
-    "check_eq(day14_part1a('18'), '9251071085')\n",
-    "check_eq(day14_part1a('2018'), '5941429882')\n",
-    "puzzle.verify(1, day14_part1a)  # ~820 ms."
+    "check_eq(day14a_part1('9'), '5158916779')\n",
+    "check_eq(day14a_part1('5'), '0124515891')\n",
+    "check_eq(day14a_part1('18'), '9251071085')\n",
+    "check_eq(day14a_part1('2018'), '5941429882')\n",
+    "puzzle.verify(1, day14a_part1)  # ~820 ms."
    ]
   },
   {
@@ -3383,7 +3383,7 @@
    },
    "outputs": [],
    "source": [
-    "def day14_part2a(s):  # Slow.\n",
+    "def day14a_part2(s):  # Slow.\n",
     "  pattern = list(map(int, s.strip()))\n",
     "  recipes = [3, 7]\n",
     "  indices = [0, 1]\n",
@@ -3398,9 +3398,9 @@
     "        return len(recipes) - len(pattern)\n",
     "    indices = [(index + 1 + recipes[index]) % len(recipes) for index in indices]\n",
     "\n",
-    "check_eq(day14_part2a('92510'), 18)\n",
-    "check_eq(day14_part2a('59414'), 2018)\n",
-    "# puzzle.verify(2, day14_part2a)  # ~30 s."
+    "check_eq(day14a_part2('92510'), 18)\n",
+    "check_eq(day14a_part2('59414'), 2018)\n",
+    "# puzzle.verify(2, day14a_part2)  # ~30 s."
    ]
   },
   {
@@ -3426,7 +3426,7 @@
     }
    ],
    "source": [
-    "def day14_part2b(s):  # Fast using numba.\n",
+    "def day14b_part2(s):  # Fast using numba.\n",
     "  pattern = np.array([int(ch) for ch in s.strip()], dtype=np.uint8)\n",
     "\n",
     "  @numba_njit(cache=True)\n",
@@ -3472,11 +3472,11 @@
     "  return func(pattern)\n",
     "\n",
     "\n",
-    "check_eq(day14_part2b('51589'), 9)\n",
-    "check_eq(day14_part2b('01245'), 5)\n",
-    "check_eq(day14_part2b('92510'), 18)\n",
-    "check_eq(day14_part2b('59414'), 2018)\n",
-    "puzzle.verify(2, day14_part2b)  # ~360 ms."
+    "check_eq(day14b_part2('51589'), 9)\n",
+    "check_eq(day14b_part2('01245'), 5)\n",
+    "check_eq(day14b_part2('92510'), 18)\n",
+    "check_eq(day14b_part2('59414'), 2018)\n",
+    "puzzle.verify(2, day14b_part2)  # ~360 ms."
    ]
   },
   {
@@ -3502,7 +3502,7 @@
     }
    ],
    "source": [
-    "def day14_part2c(s):  # Faster by generating batches.\n",
+    "def day14c_part2(s):  # Faster by generating batches.\n",
     "  pattern = np.array([int(ch) for ch in s.strip()], dtype=np.uint8)\n",
     "\n",
     "  @numba_njit(cache=True)\n",
@@ -3551,11 +3551,11 @@
     "  return func(pattern)\n",
     "\n",
     "\n",
-    "check_eq(day14_part2c('51589'), 9)\n",
-    "check_eq(day14_part2c('01245'), 5)\n",
-    "check_eq(day14_part2c('92510'), 18)\n",
-    "check_eq(day14_part2c('59414'), 2018)\n",
-    "puzzle.verify(2, day14_part2c)  # ~190 ms."
+    "check_eq(day14c_part2('51589'), 9)\n",
+    "check_eq(day14c_part2('01245'), 5)\n",
+    "check_eq(day14c_part2('92510'), 18)\n",
+    "check_eq(day14c_part2('59414'), 2018)\n",
+    "puzzle.verify(2, day14c_part2)  # ~190 ms."
    ]
   },
   {
@@ -3581,7 +3581,7 @@
     }
    ],
    "source": [
-    "def day14_part2d(s):  # Try using Knuth-Morris-Pratt (KMP); not a win for 6-subseq.\n",
+    "def day14d_part2(s):  # Try using Knuth-Morris-Pratt (KMP); not a win for 6-subseq.\n",
     "  pattern = np.array([int(ch) for ch in s.strip()], dtype=np.uint8)\n",
     "\n",
     "  @numba_njit(cache=True)\n",
@@ -3659,11 +3659,11 @@
     "  return func(pattern)\n",
     "\n",
     "\n",
-    "check_eq(day14_part2d('51589'), 9)\n",
-    "check_eq(day14_part2d('01245'), 5)\n",
-    "check_eq(day14_part2d('92510'), 18)\n",
-    "check_eq(day14_part2d('59414'), 2018)\n",
-    "puzzle.verify(2, day14_part2d)  # ~250 ms is slower than naive algorithm."
+    "check_eq(day14d_part2('51589'), 9)\n",
+    "check_eq(day14d_part2('01245'), 5)\n",
+    "check_eq(day14d_part2('92510'), 18)\n",
+    "check_eq(day14d_part2('59414'), 2018)\n",
+    "puzzle.verify(2, day14d_part2)  # ~250 ms is slower than naive algorithm."
    ]
   },
   {
@@ -3944,7 +3944,7 @@
     }
    ],
    "source": [
-    "def day15_part1a(s, verbose=False,\n",
+    "def day15a_part1(s, verbose=False,\n",
     "                 elf_attack_power=3, fail_if_elf_dies=False):\n",
     "\n",
     "  @dataclasses.dataclass\n",
@@ -4058,14 +4058,14 @@
     "  # show('' + hh.string_from_grid(grid))\n",
     "  return num_rounds * sum_points\n",
     "\n",
-    "check_eq(day15_part1a(s1), 27730)\n",
-    "check_eq(day15_part1a(s10), 36334)\n",
-    "check_eq(day15_part1a(s11), 39514)\n",
-    "check_eq(day15_part1a(s12), 27755)\n",
-    "check_eq(day15_part1a(s13), 28944)\n",
-    "check_eq(day15_part1a(s14), 18740)\n",
+    "check_eq(day15a_part1(s1), 27730)\n",
+    "check_eq(day15a_part1(s10), 36334)\n",
+    "check_eq(day15a_part1(s11), 39514)\n",
+    "check_eq(day15a_part1(s12), 27755)\n",
+    "check_eq(day15a_part1(s13), 28944)\n",
+    "check_eq(day15a_part1(s14), 18740)\n",
     "\n",
-    "puzzle.verify(1, day15_part1a)  # ~800 ms."
+    "puzzle.verify(1, day15a_part1)  # ~800 ms."
    ]
   },
   {
@@ -4298,7 +4298,7 @@
     }
    ],
    "source": [
-    "def day15_part2a(s):  # Brute-force search of increasing attack power.\n",
+    "def day15a_part2(s):  # Brute-force search of increasing attack power.\n",
     "  for elf_attack_power in itertools.count(3):\n",
     "    result = day15_part1(\n",
     "        s, elf_attack_power=elf_attack_power, fail_if_elf_dies=True)\n",
@@ -4306,13 +4306,13 @@
     "      print(f'Found solution at elf_attack_power={elf_attack_power}')\n",
     "      return result\n",
     "\n",
-    "check_eq(day15_part2a(s1), 4988)\n",
-    "check_eq(day15_part2a(s11), 31284)\n",
-    "check_eq(day15_part2a(s12), 3478)\n",
-    "check_eq(day15_part2a(s13), 6474)\n",
-    "check_eq(day15_part2a(s14), 1140)\n",
+    "check_eq(day15a_part2(s1), 4988)\n",
+    "check_eq(day15a_part2(s11), 31284)\n",
+    "check_eq(day15a_part2(s12), 3478)\n",
+    "check_eq(day15a_part2(s13), 6474)\n",
+    "check_eq(day15a_part2(s14), 1140)\n",
     "\n",
-    "# puzzle.verify(2, day15_part2a)  # ~1600 ms."
+    "# puzzle.verify(2, day15a_part2)  # ~1600 ms."
    ]
   },
   {
@@ -6150,9 +6150,9 @@
     "if not importlib.util.find_spec('networkx'):\n",
     "  print('Module networkx is unavailable.')\n",
     "else:\n",
-    "  day22_part2a = functools.partial(day22a, part2=True)\n",
-    "  check_eq(day22_part2a(s1), 45)\n",
-    "  # puzzle.verify(2, day22_part2a)  # ~2000 ms using Dijkstra (~2.7 s using A*)."
+    "  day22a_part2 = functools.partial(day22a, part2=True)\n",
+    "  check_eq(day22a_part2(s1), 45)\n",
+    "  # puzzle.verify(2, day22a_part2)  # ~2000 ms using Dijkstra (~2.7 s using A*)."
    ]
   },
   {
@@ -6582,9 +6582,9 @@
     "check_eq(day23a(s1), 7)\n",
     "puzzle.verify(1, day23a)  # ~30 ms.\n",
     "\n",
-    "day23_part2a = functools.partial(day23a, part2=True)\n",
-    "check_eq(day23_part2a(s2), 36)\n",
-    "# puzzle.verify(2, day23_part2a)  # ~2000 ms."
+    "day23a_part2 = functools.partial(day23a, part2=True)\n",
+    "check_eq(day23a_part2(s2), 36)\n",
+    "# puzzle.verify(2, day23a_part2)  # ~2000 ms."
    ]
   },
   {
@@ -6655,9 +6655,9 @@
     "check_eq(day23b(s1), 7)\n",
     "puzzle.verify(1, day23b)  # ~4 ms.\n",
     "\n",
-    "day23_part2b = functools.partial(day23b, part2=True)\n",
-    "check_eq(day23_part2b(s2), 36)\n",
-    "puzzle.verify(2, day23_part2b)  # ~285 ms."
+    "day23b_part2 = functools.partial(day23b, part2=True)\n",
+    "check_eq(day23b_part2(s2), 36)\n",
+    "puzzle.verify(2, day23b_part2)  # ~285 ms."
    ]
   },
   {
