Upgrade to Python 3.8.

--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -5294,7 +5294,8 @@
     "\n",
     "  machine = Machine()\n",
     "  machine.read_instructions(s)\n",
-    "  if optimize := len(machine.instructions) > 10:\n",
+    "  optimize = len(machine.instructions) > 10\n",
+    "  if optimize:\n",
     "    check_eq(machine.instructions[4].operation, 'eqrr')\n",
     "    register_f = machine.instructions[4].operands[1]\n",
     "    check_eq(machine.instructions[7].operation, 'addr')\n",
