--- a/advent_of_code_2018.ipynb
+++ b/advent_of_code_2018.ipynb
@@ -1116,7 +1116,7 @@
     "  lines = sorted(lines)\n",
     "  num_dates = sum('Guard' in line for line in lines)\n",
     "  asleep = np.zeros((num_dates, 60))\n",
-    "  date_guard = np.empty(num_dates, dtype=int)\n",
+    "  date_guard = np.empty(num_dates, int)\n",
     "  row = -1\n",
     "  for line in lines:\n",
     "    minute, = map(int, hh.re_groups(r' \\d\\d:(\\d\\d)', line))\n",
@@ -1377,7 +1377,7 @@
     "    return min_length\n",
     "\n",
     "  # Convert string to list of codes, each in 0..25 or 32..57 .\n",
-    "  codes = np.array([ord(ch) - ord('A') for ch in s.strip()], dtype=np.int32)\n",
+    "  codes = np.array([ord(ch) - ord('A') for ch in s.strip()], np.int32)\n",
     "  if not part2:\n",
     "    return length_of_simplified_polymer(codes)\n",
     "\n",
@@ -1544,7 +1544,7 @@
     "  shape = np.max(yxs, axis=0) + 1\n",
     "\n",
     "  def manhattan_from(yx):\n",
-    "    indices = np.indices(shape, dtype=np.int32)\n",
+    "    indices = np.indices(shape, np.int32)\n",
     "    return abs(indices[0] - yx[0]) + abs(indices[1] - yx[1])\n",
     "\n",
     "  all_manhattans = np.array([manhattan_from(yx) for yx in yxs])\n",
@@ -2171,7 +2171,7 @@
     "  def func(num_players, last_marble):\n",
     "    scores = [0] * num_players\n",
     "    # \"array[marble1] == marble2\" indicates that marble2 is next after marble1.\n",
-    "    array = np.empty(last_marble + 23, dtype=np.int32)\n",
+    "    array = np.empty(last_marble + 23, np.int32)\n",
     "    array[0] = 1\n",
     "    array[1] = 0\n",
     "    marble = 2\n",
@@ -2644,7 +2644,7 @@
     "  def get_yx_largest(size):\n",
     "    if 0:  # Slower.\n",
     "      import scipy.signal\n",
-    "      box = np.full((size, size), 1, dtype=np.int32)\n",
+    "      box = np.full((size, size), 1, np.int32)\n",
     "      result = scipy.signal.convolve2d(power, box, mode='valid')\n",
     "    else:\n",
     "      result = (integral[size:, size:] - integral[size:, :-size] -\n",
@@ -3072,8 +3072,7 @@
     "  if visualize:\n",
     "    cmap = {' ': (250,) * 3, '+': (140, 140, 140),\n",
     "            **{ch: (180,) * 3 for ch in r'|-\\/'}}\n",
-    "    image0 = np.array(\n",
-    "      [cmap[e] for e in grid.flat], dtype=np.uint8).reshape(*grid.shape, 3)\n",
+    "    image0 = np.array([cmap[e] for e in grid.flat], np.uint8).reshape(*grid.shape, 3)\n",
     "\n",
     "  images = []\n",
     "  for iteration in itertools.count():\n",
@@ -3338,7 +3337,7 @@
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def func(num_recipes):\n",
-    "    recipes = np.full(num_recipes + 11, 1, dtype=np.uint8)\n",
+    "    recipes = np.full(num_recipes + 11, 1, np.uint8)\n",
     "    num = 2\n",
     "    recipes[0] = 3\n",
     "    recipes[1] = 7\n",
@@ -3429,13 +3428,13 @@
    ],
    "source": [
     "def day14b_part2(s):  # Fast using numba.\n",
-    "  pattern = np.array([int(ch) for ch in s.strip()], dtype=np.uint8)\n",
+    "  pattern = np.array([int(ch) for ch in s.strip()], np.uint8)\n",
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def func(pattern):\n",
     "    len_pattern = len(pattern)\n",
     "    max_recipes = 100_000_000\n",
-    "    recipes = np.empty(max_recipes, dtype=np.uint8)\n",
+    "    recipes = np.empty(max_recipes, np.uint8)\n",
     "    num = 2\n",
     "    recipes[0] = 3\n",
     "    recipes[1] = 7\n",
@@ -3505,12 +3504,12 @@
    ],
    "source": [
     "def day14c_part2(s):  # Faster by generating batches.\n",
-    "  pattern = np.array([int(ch) for ch in s.strip()], dtype=np.uint8)\n",
+    "  pattern = np.array([int(ch) for ch in s.strip()], np.uint8)\n",
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def func(pattern):\n",
     "    max_recipes = 100_000_000\n",
-    "    recipes = np.empty(max_recipes, dtype=np.uint8)\n",
+    "    recipes = np.empty(max_recipes, np.uint8)\n",
     "    num = 2\n",
     "    recipes[0] = 3\n",
     "    recipes[1] = 7\n",
@@ -3584,7 +3583,7 @@
    ],
    "source": [
     "def day14d_part2(s):  # Try using Knuth-Morris-Pratt (KMP); not a win for 6-subseq.\n",
-    "  pattern = np.array([int(ch) for ch in s.strip()], dtype=np.uint8)\n",
+    "  pattern = np.array([int(ch) for ch in s.strip()], np.uint8)\n",
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def func(pattern):\n",
@@ -3593,7 +3592,7 @@
     "    # https://www.py4u.net/discuss/12693.\n",
     "    def kmp_offsets(subseq):\n",
     "      m = len(subseq)\n",
-    "      offsets = np.zeros(m, dtype=np.int64)\n",
+    "      offsets = np.zeros(m, np.int64)\n",
     "      j = 1\n",
     "      k = 0\n",
     "      while j < m:\n",
@@ -3610,7 +3609,7 @@
     "      return offsets\n",
     "\n",
     "    max_recipes = 100_000_000\n",
-    "    recipes = np.empty(max_recipes, dtype=np.uint8)\n",
+    "    recipes = np.empty(max_recipes, np.uint8)\n",
     "    num = 2\n",
     "    recipes[0] = 3\n",
     "    recipes[1] = 7\n",
@@ -3692,7 +3691,7 @@
    ],
    "source": [
     "def day14_part2(s):  # Fastest, using Boyer-Moore-Horspool subsequence search.\n",
-    "  pattern = np.array([int(ch) for ch in s.strip()], dtype=np.uint8)\n",
+    "  pattern = np.array([int(ch) for ch in s.strip()], np.uint8)\n",
     "\n",
     "  @numba_njit(cache=True)\n",
     "  def func(pattern):\n",
@@ -3706,7 +3705,7 @@
     "      return table\n",
     "\n",
     "    max_recipes = 100_000_000\n",
-    "    recipes = np.empty(max_recipes, dtype=np.uint8)\n",
+    "    recipes = np.empty(max_recipes, np.uint8)\n",
     "    num = 2\n",
     "    recipes[0] = 3\n",
     "    recipes[1] = 7\n",
@@ -4177,7 +4176,7 @@
     "    if visualize:\n",
     "      cmap = {'.': (250,) * 3, '#': (0, 0, 0),\n",
     "              'E': (255, 0, 0), 'G': (0, 190, 0)}\n",
-    "      image = np.array([cmap[e] for e in grid.ravel()], dtype=np.uint8)\n",
+    "      image = np.array([cmap[e] for e in grid.ravel()], np.uint8)\n",
     "      image = image.reshape(*grid.shape, 3)\n",
     "      image = image.repeat(5, axis=0).repeat(5, axis=1)\n",
     "      images.append(image)\n",
@@ -4350,8 +4349,7 @@
     "  low = high = None\n",
     "  results = {}\n",
     "  while True:\n",
-    "    results[current] = result = day15_part1(\n",
-    "        s, elf_attack_power=current, fail_if_elf_dies=True)\n",
+    "    results[current] = result = day15_part1(s, elf_attack_power=current, fail_if_elf_dies=True)\n",
     "    if result:  # We should try to decrease current.\n",
     "      high = current\n",
     "      if low is None:\n",
@@ -5006,7 +5004,7 @@
     "  for minute in itertools.count():\n",
     "    if visualize:\n",
     "      cmap = {'.': (200, 0, 0), '|': (0, 200, 0), '#': (0, 0, 200)}\n",
-    "      image = np.array([cmap[e] for e in grid.ravel()], dtype=np.uint8)\n",
+    "      image = np.array([cmap[e] for e in grid.ravel()], np.uint8)\n",
     "      image = image.reshape(*grid.shape, 3).repeat(3, axis=0).repeat(3, axis=1)\n",
     "      images.append(image)\n",
     "    config = grid.tobytes()  # Hashable; ''.join(grid.flat) is slower.\n",
@@ -6198,7 +6196,7 @@
     "  target_yx = tuple(map(int, hh.re_groups(r'^target: (\\d+),(\\d+)$', lines[1])))[::-1]\n",
     "\n",
     "  def construct_grid(shape):\n",
-    "    erosion_level = np.empty(shape, dtype=np.int64)\n",
+    "    erosion_level = np.empty(shape, np.int64)\n",
     "    for y, x in np.ndindex(shape):\n",
     "      if y == 0:\n",
     "        geologic_index = x * 16807\n",
@@ -6270,7 +6268,7 @@
     "  distance, path = dijkstra(grid, target_yx, visualize)\n",
     "  if visualize:\n",
     "    cmap = {0: (150, 0, 0), 1: (0, 150, 0), 2: (0, 0, 150)}\n",
-    "    image = np.array([cmap[e] for e in grid.ravel()], dtype=np.uint8)\n",
+    "    image = np.array([cmap[e] for e in grid.ravel()], np.uint8)\n",
     "    image = image.reshape(*grid.shape, 3)\n",
     "    image2 = image.copy()\n",
     "    for node in path:\n",
@@ -6547,7 +6545,7 @@
     "    # for c in set(itertools.product([-1, 0, 1], repeat=3)) - {0, 0, 0}:\n",
     "    # for c in hvalues:\n",
     "    for c in [-np.sign(good_position)]:\n",
-    "      c = np.array(c, dtype=np.float64)\n",
+    "      c = np.array(c, np.float64)\n",
     "      matrix_ub = np.array(hvalues)\n",
     "      b_ub = np.nan_to_num(best_polytope, posinf=10**10)\n",
     "      res = scipy.optimize.linprog(c, matrix_ub, b_ub, method='highs')\n",
